--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,13 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
+      <h1 class="mt-5">Me vuelvo loco cuando veo que...</h1>
       <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
+      <p class="alert alert-warning mt-4" id="excusa"></p>
+      <p id="excusa"></p>
       <div class="fixed-bottom p-4">
         Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+        <a href="https://www.4geeksacademy.com">4Geeks Academy & Jaume153</a>
       </div>
     </div>
   </body>
