segundo generador de excusas

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,11 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Me vuelvo loco cuando veo que...</h1>
+      <h1 class="mt-5 text-decoration-underline text-primary">
+        Me vuelvo loco cuando veo que...
+      </h1>
       <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4" id="excusa"></p>
+      <p class="alert alert-primary mt-4" id="excusa"></p>
       <p id="excusa"></p>
       <div class="fixed-bottom p-4">
         Made with ❤️ by
